manifests/sftd/base/statefulset-sftd.yaml
# we _need_ a statefulset because we never want more pods than replicas, even
# during roll-outs as due to hostNetwork they'll surged pods will be
# unschedulable due to port binding conflict
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sftd
spec:
  serviceName: sftd-headless
  selector:
    matchLabels:
      app: sftd
  template:
    metadata:
      labels:
        app: sftd
    spec:
      hostNetwork: true
      volumes:
        - name: external-ip
          emptyDir: {}
      containers:
        - name: sftd
          image: quay.io/wire/sftd
          volumeMounts:
            - mountPath: /external-ip
              name: external-ip
          ports:
            - containerPort: 8585
              name: sft
          command:
            - /bin/sh
            - -c
            - |
                set -e
                . /external-ip/env
                exec sftd -I $POD_IP -M $POD_IP -A $EXTERNAL_IP -u https://$(SFTD_INGRESS_HOST)/$POD_NAME
