manifests/sftd/base/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftd-lb
spec:
  selector:
    app: sftd-lb
  ports:
  - port: 80
    targetPort: 80
