manifests/sftd/base/service-sftd.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftd
spec:
  selector:
    app: sftd
  ports:
  - port: 80
    targetPort: 8585
